--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <meta charset="utf-8">
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
 
     <head>
         <title>Rock, Paper, Scissors!</title>
     </head>
 
     <body>
-
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
     </body>
 
 </html>
